# cloud_bridge

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.alpine.humble  README.md  _entrypoint.sh  package.xml  ros_entrypoint.sh
config/: client.yaml  params.yaml  server.yaml
docker/: Dockerfile  _entrypoint.sh
docker/config/: server.yaml
include/cloud_bridge/: bridge_client.hpp  bridge_node.hpp  bridge_rcl_node.hpp  cloud_bridge.hpp  cloud_bridge_base.hpp  cloud_bridge_client.hpp  cloud_bridge_server.hpp  logging.hpp  message_types.hpp  zmq_transport.hpp
launch/: cloi_launch_common.py  cloud_bridge_client.launch.py  cloud_bridge_launch_common.py  cloud_bridge_server.launch.py
shell/: liveness.sh  readiness.sh
src/: bridge_client.cpp  bridge_node.cpp  bridge_rcl_node.cpp  client_main.cpp  cloud_bridge.cpp  cloud_bridge_base.cpp  cloud_bridge_client.cpp  cloud_bridge_server.cpp  message_types.cpp  server_main.cpp  zmq_transport.cpp
