<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloud_bridge</name>
  <version>0.0.1</version>
  <description>Transfer ROS2 Message to Cloud using ZeroMQ</description>
  <maintainer email="sungkyu.kang@lge.com">sungkyu.kang</maintainer>
  <license>LGE Internal</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rcutils</depend>
  <depend>rmw</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>rcl</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
